# ESP32_HMI

./: .gitignore  README.md  SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
CAD files/HMI case/: ESP32-8048S070_7in Screen.stp  HMI Case Back.stp  HMI Case Front.stp  HMI case back.stl  HMI case front.stl
ESP32 HMI/: platformio.ini
HMI/: platformio.ini  sunton_esp32-8048S070C_v13.json
HMI/include/: LGFX_sunton_ESP32_8048S070C.h  lv_conf.h  secrets.h  secrets_example.h
HMI/lib/: smartdisplay_main.cpp
HMI/src/: main.cpp
HMI/src/guiFunctions/: InfluxFunc.h  ScrChartFunc.h  ScrHomeFunc.h  ScrSettingsFunc.h  gui.cpp  gui.h  logFunc.h  mechanicalFunc.h  mqttFunc.h  tempFunc.h
HMI/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
HMI/src/ui/components/: ui_comp.h  ui_comp_fullscreen.c  ui_comp_fullscreen.h  ui_comp_hook.c  ui_comp_hook.h
HMI/src/ui/fonts/: montserrat_250.c
HMI/src/ui/images/: ui_img_2110918543.c  ui_img_2127381671.c  ui_img_267769087.c  ui_img_347167274.c  ui_img_home_png.c
HMI/src/ui/screens/: ui_ScrAQ.c  ui_ScrCharts.c  ui_ScrHome.c  ui_ScrSettings.c  ui_ScrSleep.c  ui_ScrTBD.c  ui_ScrTemp.c  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
HeaterPLC/: platformio.ini
HeaterPLC/include/: secrets_example.h
HeaterPLC/src/: connectionFunc.hpp  main.cpp
VentFanPLC/: platformio.ini
VentFanPLC/src/: connectionFunc.hpp  main.cpp
